--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script type="text/javascript" defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </body>
 </html>
